Modified deployment variables as well as any constants that resulted
Signed-off-by: Huy Nguyen <wronghuy@amazon.com>

--- a/config/playground/cronjob/sample_data_tooling/refresh_deployment.yaml
+++ b/config/playground/cronjob/sample_data_tooling/refresh_deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: refresh-data-cronjob
+  name: sample-data-refresh-cronjob
 spec:
   # Runs everyday at 1 am UTC
   schedule: "0 1 * * *"
@@ -10,23 +10,25 @@ spec:
       template:
         spec:
           containers:
-            - name: refresh-data-job
-              image: huyaboo/demo
+            - name: sample-data-refresh-cronjob
+              image: public.ecr.aws/j6b3p0p7/sample-data-tooling:latest
               env:
               - name: SAMPLE_DATA_USERNAME
                 valueFrom:
                   secretKeyRef:
-                    name: demo-secret
+                    name: sample-data-secret
                     key: username
               - name: SAMPLE_DATA_PASSWORD
                 valueFrom:
                   secretKeyRef:
-                    name: demo-secret
+                    name: sample-data-secret
                     key: password
-              - name: HOST
+                # SAMPLE_DATA_HOST is a host name or IP without the scheme
+                # ex: SAMPLE_DATA_HOST=localhost
+              - name: SAMPLE_DATA_HOST
                 valueFrom:
                   secretKeyRef:
-                    name: demo-secret
+                    name: sample-data-secret
                     key: host
               command: ["python3"]
               args: ["./sample_data_jobs/refresh_job.py"]
