--- a/src/playground/sample_data_tooling/requirements.txt
+++ b/src/playground/sample_data_tooling/requirements.txt
@@ -1,31 +1,30 @@
 # Version number has to meet or exceed the version numbers below
-attrs==21.4.0
-certifi==2022.6.15
-charset-normalizer==2.1.0
-Faker==12.3.3
-faker-biology==0.6.0
-faker-credit-score==0.3.0
-faker-microservice==2.0.0
-faker-python==0.0.1
-faker-vehicle==0.2.0
-faker-web==0.3.1
-faker-wifi-essid==0.4.1
-faker_airtravel==0.4
-faker_education==1.2
-faker_music==0.4
-idna==3.3
-iniconfig==1.1.1
-install==1.3.5
-mdgen==0.1.10
-opensearch-py==2.0.0
-packaging==21.3
-pluggy==1.0.0
-py==1.11.0
-pyparsing==3.0.9
-pytest==7.1.2
-python-dateutil==2.8.2
-requests==2.28.1
-requests-mock==1.9.3
-six==1.16.0
-tomli==2.0.1
-urllib3==1.26.10
+attrs>=21.4.0
+certifi>=2022.6.15
+charset-normalizer>=2.1.0
+Faker>=12.3.3
+faker-biology>=0.6.0
+faker-credit-score>=0.3.0
+faker-microservice>=2.0.0
+faker-python>=0.0.1
+faker-vehicle>=0.2.0
+faker-web>=0.3.1
+faker-wifi-essid>=0.4.1
+faker_airtravel>=0.4
+faker_music>=0.4
+idna>=3.3
+iniconfig>=1.1.1
+install>=1.3.5
+mdgen>=0.1.10
+opensearch-py>=2.0.0
+packaging>=21.3
+pluggy>=1.0.0
+py>=1.11.0
+pyparsing>=3.0.9
+pytest>=7.1.2
+python-dateutil>=2.8.2
+requests>=2.28.1
+requests-mock>=1.9.3
+six>=1.16.0
+tomli>=2.0.1
+urllib3>=1.26.10
