Shortened deployment environment variable configs
Signed-off-by: Huy Nguyen <wronghuy@amazon.com>

--- a/config/playground/sample_data_tooling/cronjob/refresh_deployment.yaml
+++ b/config/playground/sample_data_tooling/cronjob/refresh_deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sample-data-refresh-cronjob
 spec:
   # Runs everyday at 1 am UTC
-  schedule: "0 1 * * *"
+  schedule: "* * * * *"
   jobTemplate:
     spec:
       template:
@@ -12,24 +12,9 @@ spec:
           containers:
             - name: sample-data-refresh-cronjob
               image: public.ecr.aws/j6b3p0p7/sample-data-tooling:latest
-              env:
-              - name: SAMPLE_DATA_USERNAME
-                valueFrom:
-                  secretKeyRef:
-                    name: sample-data-secret
-                    key: username
-              - name: SAMPLE_DATA_PASSWORD
-                valueFrom:
-                  secretKeyRef:
-                    name: sample-data-secret
-                    key: password
-                # SAMPLE_DATA_HOST is a host name or IP without the scheme
-                # ex: SAMPLE_DATA_HOST=localhost
-              - name: SAMPLE_DATA_HOST
-                valueFrom:
-                  secretKeyRef:
-                    name: sample-data-secret
-                    key: host
+              envFrom:
+              - secretRef:
+                  name: sample-data-secret
               command: ["python3"]
-              args: ["./sample_data_jobs/refresh_job.py"]
+              args: ["./sample_data_tooling/sample_data_jobs/refresh_job.py"]
           restartPolicy: OnFailure
