Changed cronjob schedule for refresh job
Signed-off-by: Huy Nguyen <wronghuy@amazon.com>

--- a/config/playground/sample_data_tooling/cronjob/refresh_deployment.yaml
+++ b/config/playground/sample_data_tooling/cronjob/refresh_deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sample-data-refresh-cronjob
 spec:
   # Runs everyday at 1 am UTC
-  schedule: "* * * * *"
+  schedule: "0 1 * * *"
   jobTemplate:
     spec:
       template:
