--- a/src/playground/sample_data_tooling/Dockerfile
+++ b/src/playground/sample_data_tooling/Dockerfile
@@ -1,4 +1,8 @@
-# syntax=docker/dockerfile:1
+# SPDX-License-Identifier: Apache-2.0
+#
+# The OpenSearch Contributors require contributions made to
+# this file be licensed under the Apache-2.0 license or a
+# compatible open source license.
 
 FROM python:3
 
@@ -6,4 +10,6 @@ COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
 
-COPY . .
+RUN mkdir sample_data_tooling
+
+COPY . sample_data_tooling
