--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -4,7 +4,7 @@ name: Deploy OpenSearch and OpenSearch Dashboards
 
 on:
   push:
-    branches: [ main ]
+    branches: [ privatebranchfeature ]
   # adds workflow_dispatch for manually running a workflow
   workflow_dispatch:
 
@@ -22,6 +22,7 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
+          base: privatebranchfeature
           # creats filters for tracking dev and prod changes
           filters: |
             dev:
