--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -10,7 +10,7 @@ replicaCount: 2
 
 image:
   repository: "liutaodocker2019/anywhere-osd"
-  # override image tag, which is .Chart.AppVersion by default
+  # override image tag, which is .Chart.AppVersion by default.
   tag: ""
   pullPolicy: "IfNotPresent"
 
