--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -78,8 +78,8 @@ config:
     opensearchDashboards.branding.useExpandedHeader: false
     # Enable wizard feature
     wizard.enabled: true
-    # Enable MD
-    data_source.enabled: true
+    # Enable Multiple Datasource
+    # data_source.enabled: true
 
 priorityClassName: ""
 
