--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -9,7 +9,7 @@ opensearchHosts: "https://opensearch-cluster-leader:9200"
 replicaCount: 2
 
 image:
-  repository: "opensearchproject/opensearch-dashboards"
+  repository: "liutaodocker2019/anywhere-osd"
   # override image tag, which is .Chart.AppVersion by default
   tag: ""
   pullPolicy: "IfNotPresent"
@@ -79,7 +79,7 @@ config:
     # Enable wizard feature
     wizard.enabled: true
     # Enable Multiple Datasource
-    # data_source.enabled: true
+    data_source.enabled: true
 
 priorityClassName: ""
 
