update md feature
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -78,7 +78,7 @@ config:
     opensearchDashboards.branding.useExpandedHeader: false
     # Enable wizard feature
     wizard.enabled: true
-    # Enable Multiple Datasource
+    # Enable multiple datasource
     data_source.enabled: true
 
 priorityClassName: ""
