--- a/config/playground/helm/dev/helm-opensearch.yaml
+++ b/config/playground/helm/dev/helm-opensearch.yaml
@@ -231,7 +231,7 @@ securityConfig:
             #server_username: kibanaserver
             #index: '.kibana'
             http:
-              anonymous_auth_enabled: false
+              anonymous_auth_enabled: true
               xff:
                 enabled: false
                 internalProxies: '192\.168\.0\.10|192\.168\.0\.11' # regex pattern
