set up workflow to install plugins
Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
-          # creats filters for tracking dev and prod changes
+          # creates filters to check if any dev or prod changes
           filters: |
             dev:
               - 'config/playground/helm/dev/**'
