change to use checkout v3 and use always pull due to latest tag and check file exist before updating config
Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -12,7 +12,8 @@ image:
   repository: "opensearchplayground/opensearch-dashboards"
   # override image tag, which is .Chart.AppVersion by default
   tag: "latest"
-  pullPolicy: "IfNotPresent"
+  # Always/Never/IfNotPresent
+  pullPolicy: "Always"
 
 imagePullSecrets: []
 nameOverride: ""
