--- a/config/playground/docker/dev/extra_config/osd.yml
+++ b/config/playground/docker/dev/extra_config/osd.yml
@@ -15,6 +15,6 @@ opensearchDashboards.branding.useExpandedHeader: false
 # Enable wizard feature
 wizard.enabled: true
 
-#csp settings
+#Content security policy(csp) settings
 csp.rules: ["connect-src 'self' www.google-analytics.com maps.opensearch.org;"]
 csp.warnLegacyBrowsers: false
