--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -41,6 +41,7 @@ jobs:
       secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
       region: ${{ secrets.AWS_REGION_DEV }}
       kube-config: ${{ secrets.KUBE_CONFIG_DATA_DEV }}
+      ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
 
   OS-OSD-Prod-Deployment:
     needs: Pre-Deployment
