set up workflow to install plugins (#91)
* set up workflow to install plugins

Signed-off-by: Lu Yu <nluyu@amazon.com>

* change to const and change permission level

Signed-off-by: Lu Yu <nluyu@amazon.com>

* change to use checkout v3 and use always pull due to latest tag and check file exist before updating config

Signed-off-by: Lu Yu <nluyu@amazon.com>

* added padding for varibales

Signed-off-by: Lu Yu <nluyu@amazon.com>

* move config from extra config folder to chart values yaml and set tracking id when install chart

Signed-off-by: Lu Yu <nluyu@amazon.com>

* enable ga in dev

Signed-off-by: Lu Yu <nluyu@amazon.com>

Signed-off-by: Lu Yu <nluyu@amazon.com>

--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
-          # creats filters for tracking dev and prod changes
+          # creates filters to check if any dev or prod changes
           filters: |
             dev:
               - 'config/playground/helm/dev/**'
@@ -41,6 +41,7 @@ jobs:
       secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
       region: ${{ secrets.AWS_REGION_DEV }}
       kube-config: ${{ secrets.KUBE_CONFIG_DATA_DEV }}
+      ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
 
   OS-OSD-Prod-Deployment:
     needs: Pre-Deployment
