--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -9,10 +9,11 @@ opensearchHosts: "https://opensearch-cluster-leader:9200"
 replicaCount: 2
 
 image:
-  repository: "opensearchproject/opensearch-dashboards"
+  repository: "opensearchplayground/opensearch-dashboards"
   # override image tag, which is .Chart.AppVersion by default
-  tag: ""
-  pullPolicy: "IfNotPresent"
+  tag: "latest"
+  # Always/Never/IfNotPresent
+  pullPolicy: "Always"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -76,8 +77,11 @@ config:
     server.host: '0.0.0.0'
     # Use the consolidated menu and global header bar
     opensearchDashboards.branding.useExpandedHeader: false
-    # Enable wizard feature
-    wizard.enabled: true
+    #Content security policy(csp) settings
+    csp.rules: [ "connect-src 'self' www.google-analytics.com maps.opensearch.org;" ]
+    csp.warnLegacyBrowsers: false
+    # Google analytics plugin settings
+    google_analytics_plugin.enabled: true
 
 priorityClassName: ""
 
