--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -81,7 +81,7 @@ config:
     csp.rules: [ "connect-src 'self' www.google-analytics.com maps.opensearch.org;" ]
     csp.warnLegacyBrowsers: false
     # Google analytics plugin settings
-    google_analytics_plugin.enabled: true
+    google_analytics_plugin.enabled: false
 
 priorityClassName: ""
 
