change docker path
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/config/playground/docker/dev/Dockerfile
+++ b/config/playground/docker/dev/Dockerfile
@@ -1,4 +1,4 @@
-FROM opensearchproject/opensearch-dashboards:latest
+FROM liutaodocker2019/anywhere-osd:mdauth
 
 COPY . /opt/opensearch-dashboards/
 
