test new changes
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/.github/workflows/os-osd-deployment-scheduled.yml
+++ b/.github/workflows/os-osd-deployment-scheduled.yml
@@ -3,6 +3,8 @@
 name: Scheduled Deploy OpenSearch and OpenSearch Dashboards
 
 on:
+  push:
+    branches: [ previewchangefeature ]
   # Adds workflow_dispatch for manually running a workflow
   workflow_dispatch:
   schedule:
