test if break dev with new change
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/.github/workflows/os-osd-deployment.yml
+++ b/.github/workflows/os-osd-deployment.yml
@@ -4,7 +4,7 @@ name: Deploy OpenSearch and OpenSearch Dashboards
 
 on:
   push:
-    branches: [ main ]
+    branches: [ previewchangefeature ]
   # adds workflow_dispatch for manually running a workflow
   workflow_dispatch:
 
@@ -22,6 +22,7 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
+          base: previewchangefeature
           # creates filters to check if any dev or prod changes
           filters: |
             dev:
