--- a/config/playground/helm/dev/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/dev/helm-opensearch-dashboards.yaml
@@ -77,11 +77,15 @@ config:
     server.host: '0.0.0.0'
     # Use the consolidated menu and global header bar
     opensearchDashboards.branding.useExpandedHeader: false
+
+    # Enable wizard feature
+    wizard.enabled: true
+
     #Content security policy(csp) settings
     csp.rules: [ "connect-src 'self' www.google-analytics.com maps.opensearch.org;" ]
     csp.warnLegacyBrowsers: false
     # Google analytics plugin settings
-    google_analytics_plugin.enabled: true
+    google_analytics_plugin.enabled: false
 
 priorityClassName: ""
 
