--- a/config/playground/helm/preview/helm-opensearch-dashboards.yaml
+++ b/config/playground/helm/preview/helm-opensearch-dashboards.yaml
@@ -6,13 +6,12 @@
 # Declare variables to be passed into your templates.
 
 opensearchHosts: "https://opensearch-cluster-leader:9200"
-replicaCount: 2
+replicaCount: 3
 
 image:
   repository: "opensearchplayground/opensearch-dashboards"
   # override image tag, which is .Chart.AppVersion by default
   tag: "latest"
-  # Always/Never/IfNotPresent
   pullPolicy: "Always"
 
 imagePullSecrets: []
@@ -69,7 +68,9 @@ config:
     opensearch.password: kibanaserver
     opensearch.requestHeadersWhitelist: [authorization, securitytenant]
     opensearch_security.auth.anonymous_auth_enabled: true
-    opensearch_security.multitenancy.enabled: false
+    opensearch_security.multitenancy.enabled: true
+    opensearch_security.multitenancy.tenants.enable_global: true
+    opensearch_security.multitenancy.tenants.enable_private: true
     opensearch_security.multitenancy.tenants.preferred: [Global, Private]
     opensearch_security.readonly_mode.roles: [kibana_read_only]
     # Use this setting if you are running opensearch-dashboards without https
@@ -77,15 +78,31 @@ config:
     server.host: '0.0.0.0'
     # Use the consolidated menu and global header bar
     opensearchDashboards.branding.useExpandedHeader: false
-
     # Enable wizard feature
     wizard.enabled: true
+    # Enable multiple datasource
+    data_source.enabled: true
+
+    # security plugin for openid
+    opensearch_security.auth.type: ['Basicauth','openid']
+    opensearch_security.auth.multiple_auth_enabled: true
+    opensearch_security.ui.openid.login.buttonname: "Log in with Google account"
+    opensearch_security.ui.openid.login.brandimage: "https://opensearch.org/assets/brand/PNG/Mark/opensearch_mark_default.png"
+    opensearch_security.ui.openid.login.showbrandimage: true
+    opensearch_security.openid.base_redirect_url: "https://reinvent.playground.opensearch.org"
+    opensearch_security.openid.scope: 'openid profile email'
+    opensearch_security.openid.verify_hostnames: false
+    opensearch_security.openid.refresh_tokens: false
+
+    opensearch_security.openid.connect_url: "https://accounts.google.com/.well-known/openid-configuration"
+    opensearch_security.openid.client_id: ${OPENID_CLIENT_ID}
+    opensearch_security.openid.client_secret: ${OPENID_CLIENT_SECRET}
+    opensearch_security.openid.logout_url: https://reinvent.playground.opensearch.org/
 
     #Content security policy(csp) settings
-    csp.rules: [ "connect-src 'self' www.google-analytics.com maps.opensearch.org;" ]
+    csp.rules: ["connect-src 'self' www.google-analytics.com maps.opensearch.org;"]
     csp.warnLegacyBrowsers: false
-    # Google analytics plugin settings
-    google_analytics_plugin.enabled: false
+    google_analytics_plugin.trackingID: ${GA_TRACKING_ID}
 
 priorityClassName: ""
 
