--- a/.github/workflows/deployment-template.yml
+++ b/.github/workflows/deployment-template.yml
@@ -37,7 +37,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Step 1 - Replace Tokens
+      - name: Step 1 - Replace Tokens for helm chart configuration
         if: ${{inputs.deploy-env}} == 'preview'
         uses: cschleiden/replace-tokens@v1
         with:
@@ -51,14 +51,39 @@ jobs:
           OPENID_LOGOUT_URL: ${{ secrets.openid_logout_url }}
           GA_TRACKING_ID: ${{ secrets.ga-tracking-id }}
 
-      - name: Step 2 - Configure AWS Credentials
+      - name: Step 2 - Replace Tokens for logstash configuration
+        if: ${{inputs.deploy-env}} == 'preview'
+        uses: cschleiden/replace-tokens@v1
+        with:
+          files: '["${{ github.workspace }}/config/playground/metrics/logstash/${{inputs.deploy-env}}/logstash.yaml"]'
+          tokenPrefix: '${'
+          tokenSuffix: '}'
+        env:
+          OSD_USER: ${{ secrets.osd_user }}
+          OSD_USER_PASSWORD: ${{ secrets.osd_user_password }}
+
+      - name: Step 3 - Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.access-key-id }}
           aws-secret-access-key: ${{ secrets.secret-access-key }}
           aws-region: ${{ secrets.region }}
 
-      - name: Step 3 - Deploy OpenSearch and OpenSearch Dashboards By Helm Chart
+      - name: Step 4 - Delete Logstash
+        if: ${{inputs.deploy-env}} == 'preview'
+        uses: elastic-analytics/dashboards-action@main
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
+          TRACKING_ID: ${{ secrets.ga-tracking-id }}
+        with:
+          plugins: "" # optional, list of Helm plugins. eg. helm-secrets or helm-diff.
+          # Teardown the current OS and OSD and then install the lastest version
+          # of OS and OSD as it only takes 23 seconds for the process, will add
+          # blue/green deployment later.
+          command: |
+            kubectl delete ns logstash
+
+      - name: Step 5 - Deploy OpenSearch and OpenSearch Dashboards By Helm Chart
         uses: elastic-analytics/dashboards-action@main
         env:
           KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
@@ -78,3 +103,19 @@ jobs:
             kubectl get pvc | grep opensearch-cluster-leader-opensearch-cluster-leader- | awk '{print $1}'| xargs kubectl delete pvc
             helm install opensearch opensearch/opensearch -f config/playground/helm/${{inputs.deploy-env}}/helm-opensearch.yaml
             helm install dashboards opensearch/opensearch-dashboards -f config/playground/helm/${{inputs.deploy-env}}/helm-opensearch-dashboards.yaml
+
+      - name: Step 6 - Install Logstash
+        if: ${{inputs.deploy-env}} == 'preview'
+        uses: elastic-analytics/dashboards-action@main
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.kube-config }}
+          TRACKING_ID: ${{ secrets.ga-tracking-id }}
+        with:
+          plugins: "" # optional, list of Helm plugins. eg. helm-secrets or helm-diff.
+          # Teardown the current OS and OSD and then install the lastest version
+          # of OS and OSD as it only takes 23 seconds for the process, will add
+          # blue/green deployment later.
+          command: |
+            kubectl create ns logstash
+            kubectl create -f -f config/playground/metrics/logstash/${{inputs.deploy-env}}/logstash-configmap.yaml
+            kubectl apply -f config/playground/metrics/logstash/${{inputs.deploy-env}}/logstash.yaml
