add missing username
Signed-off-by: Tao Liu <liutaoaz@amazon.com>

--- a/.github/workflows/deployment-template.yml
+++ b/.github/workflows/deployment-template.yml
@@ -28,6 +28,10 @@ on:
         required: false
       ga-tracking-id:
         required: false
+      osd_user: 
+        required: false
+      osd_user_password: 
+        required: false
 
 jobs:
 
