--- a/.github/workflows/os-osd-deployment-scheduled.yml
+++ b/.github/workflows/os-osd-deployment-scheduled.yml
@@ -27,6 +27,8 @@ jobs:
       openid_base_redirect_url: ${{ secrets.OPENID_LOGOUT_URL }}
       openid_logout_url: ${{ secrets.OPENID_BASE_REDIRECT_URL }}
       ga-tracking-id: ${{ secrets.GA_TRACKING_ID }}
+      osd_user: ${{ secrets.OSD_USER }}
+      osd_user_password: ${{ secrets.OSD_USER_PASSWORD }}
 
   OSD-Functional-Test-Preview:
     needs: OS-OSD-Preview-Scheduled-Deployment
