--- a/.github/workflows/functional-test-template.yml
+++ b/.github/workflows/functional-test-template.yml
@@ -20,7 +20,7 @@ jobs:
           uses: actions/checkout@v3
           with:
             repository: elastic-analytics/opensearch-dashboards-functional-test
-            ref: playground
+            ref: playground-preview
 
         - name: Step 0 - Install dependencies for functional test
           run: |
@@ -38,13 +38,21 @@ jobs:
           run: |
             yarn cypress run --spec "cypress/integration/playground/dashboards/*.js" --config "baseUrl=${{inputs.endpoint}}" --env "openSearchUrl=${{inputs.endpoint}},SECURITY_ENABLED=true,username=${{secrets.osd-user}},password=${{secrets.osd-user-password}}"
 
+        - name: Step 3 - Add moviegeek dashboard
+          run: |
+            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import -H 'osd-xsrf: true' --form file=@cypress/dashboards/moviegeekdashboard.ndjson" -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
+
+        - name: Step 4 - Add metricsbeat dashboard
+          run: |
+            curl -XPOST ${{inputs.endpoint}}/api/saved_objects/_import -H 'osd-xsrf: true' --form file=@cypress/dashboards/metricbeat-eks-overview.ndjson" -k -u ${{secrets.osd-user}}:${{secrets.osd-user-password}}
+
   Plugins:
     runs-on: ubuntu-latest
     needs: OSD-Functional-Test-OSD
     strategy:
       fail-fast: false
       matrix: 
-        run: ['OSD-Functional-Test-AD', 'OSD-Functional-Test-Alert', 'OSD-Functional-Test-Notifications', 'OSD-Functional-Test-Reports', 'OSD-Functional-Test-IndexMan']
+        run: ['OSD-Functional-Test-AD', 'OSD-Functional-Test-Alert', 'OSD-Functional-Test-Notifications', 'OSD-Functional-Test-Reports', 'OSD-Functional-Test-Observability', 'OSD-Functional-Test-IndexMan']
     steps:
     - run: echo Run ${{ matrix.run }}
     - name: Checkout functional test repo
